# simplevideo

./: .clang-format  .gitignore  CMakeLists.txt  index.ts  package-lock.json  package.json
include/: concurrent_queue.h
src/: CMakeLists.txt
src/node-bindings/: CMakeLists.txt
src/node-bindings/src/: main.cpp  win_delay_exe_hook.cpp
src/video/: logger.h  video.h  video_decoder.h
